# eg4-battery-monitor

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: WIRING.md
examples/: eg4-monitor.service  home-assistant-cards.yaml
src/eg4_monitor/: __init__.py  battery.py  cli.py  config.py  monitor.py  mqtt.py  ui.py  web.py
tests/: test_monitor.py
